--- a/views/pages/status.ejs
+++ b/views/pages/status.ejs
@@ -56,7 +56,7 @@
             Was a reson for absence given? (Absence Notification:)<br>
             What is the name of the child provided (if given)? (Child Name:)<br>
             What is the reason they won't be attending school (if given)? (Reason:)<br>
-            Length of absence (if given)? (AM, PM, All Day:)</quote>
+            Length of time the child will not be in school (if given)? (Morning, Afternoon, All Day:)</quote>
         <p>Token Cost: <%=ai_parse.cost.tokens%></p>
         <p>Actual Cost: $<%=ai_parse.cost.actualCents%></p>
     </body>
